tools/lcd/idl/grammar.txt

File	     <-	


Interface    <- INTERFACE Identifier Description?
	     OPENC Type*  Message+ CLOSEC SEMI SPACING

Message	     <-	   MESSAGE Identifier OPEN Arguments CLOSE SEMI SPACING

Arguments    <-	   ArgStart* ArgLast?
ArgStart     <-	   (SimpleArg / DynamicArg) COMMA
ArgLast	     <-	   (SimpleArg / DynamicArg)
SimpleArg    <-	   Type Identifier
DynamicArg   <-	   Type Identifier OPENS Identifier CLOSES


Type	     <-	   'bool' / 'int32' / 'char'

Identifier   <-	   IdentStart IdentCont* Spacing
IdentStart   <-	   [a-zA-Z_]
IdentCont    <-	   IdentStart / [0-9]


// reserved words
MESSAGE	     <-	   'message' Spacing
INTERFACE    <-	   'interface' Spacing


SEMI	     <-	   ';'
OPENC	     <-	   '{'
CLOSEC	     <-	   '}'
OPENS	     <-	   '['
CLOSES	     <-	   ']'
OPEN	     <-	   '('
CLOSE	     <-	   ')'
COMMA	     <-	   ','

Spacing	     <-	   Space*
Space	     <-	   ' ' / '\t' / EndOfLine
Comment	     <-	   ('/*' .* '*/' 
	     	   / '//' (!EndOfLine .)* EndOfLine)
EndOfLine    <-	   '\r\n' / '\n' / '\r'
