tools/lcd/idl/parser/lcd_idl.cpp

 #include "lcd_ast.h"
	    #include <vector>
	    #include <stdlib.h>
	    #include <string>
	    #include <stdint.h> 

#include <list>
#include <string>
#include <vector>
#include <map>
#include <fstream>
#include <sstream>
#include <iostream>
#include <string.h>


namespace Parser{



struct Value{
    typedef std::list<Value>::const_iterator iterator;

    Value():
        which(1),
        value(0){
    }

    Value(const Value & him):
    which(him.which),
    value(0){
        if (him.isData()){
            value = him.value;
        }
        if (him.isList()){
            values = him.values;
        }
    }

    explicit Value(const void * value):
        which(0),
        value(value){
    }

    Value & operator=(const Value & him){
        which = him.which;
        if (him.isData()){
            value = him.value;
        }
        if (him.isList()){
            values = him.values;
        }
        return *this;
    }

    Value & operator=(const void * what){
        this->value = what;
        return *this;
    }

    void reset(){
        this->value = 0;
        this->values.clear();
        this->which = 1;
    }

    int which; // 0 is value, 1 is values

    inline bool isList() const {
        return which == 1;
    }

    inline bool isData() const {
        return which == 0;
    }

    inline const void * getValue() const {
        return value;
    }

    inline void setValue(const void * value){
        which = 0;
        this->value = value;
    }

    inline const std::list<Value> & getValues() const {
        return values;
    }

    /*
    inline void setValues(std::list<Value> values){
        which = 1;
        values = values;
    }
    */

    const void * value;
    std::list<Value> values;
};

class Result{
public:
    Result():
    position(-2){
    }

    Result(const int position):
    position(position){
    }

    Result(const Result & r):
    position(r.position),
    value(r.value){
    }

    Result & operator=(const Result & r){
        position = r.position;
        value = r.value;
        return *this;
    }

    void reset(){
        value.reset();
    }

    void setPosition(int position){
        this->position = position;
    }

    inline int getPosition() const {
        return position;
    }

    inline bool error(){
        return position == -1;
    }

    inline bool calculated(){
        return position != -2;
    }

    inline void nextPosition(){
        position += 1;
    }

    void setError(){
        position = -1;
    }

    inline void setValue(const Value & value){
        this->value = value;
    }

    /*
    Value getLastValue() const {
        if (value.isList()){
            if (value.values.size() == 0){
                std::cout << "[peg] No last value to get!" << std::endl;
            }
            return value.values[value.values.size()-1];
        } else {
            return value;
        }
    }
    */

    inline int matches() const {
        if (value.isList()){
            return this->value.values.size();
        } else {
            return 1;
        }
    }

    inline const Value & getValues() const {
        return this->value;
    }

    void addResult(const Result & result){
        std::list<Value> & mine = this->value.values;
        mine.push_back(result.getValues());
        this->position = result.getPosition();
        this->value.which = 1;
    }

private:
    int position;
    Value value;
};



struct Chunk0{
Result chunk_Identifier;
    Result chunk_IdentCont;
    Result chunk_File;
    Result chunk_Typedef;
    Result chunk_Verbatim;
};

struct Chunk1{
Result chunk_RealType;
    Result chunk_String;
    Result chunk_Things;
    Result chunk_Include;
    Result chunk_FirstParam;
};

struct Chunk2{
Result chunk_LastParam;
    Result chunk_Parameters;
    Result chunk_Rpc;
    Result chunk_Message;
    Result chunk_Message_field;
};

struct Chunk3{
Result chunk_Projection;
    Result chunk_Proj_type;
    Result chunk_Start;
    Result chunk_Specification;
    Result chunk_ProjField;
};

struct Chunk4{
Result chunk_Last;
    Result chunk_Declaration;
    Result chunk_Comment;
    Result chunk_Comment_rest;
    Result chunk_Line_comm_rest;
};

struct Chunk5{
Result chunk_Line_comment;
    Result chunk_Simple_Type;
    Result chunk_Type_w_modifier;
    Result chunk_Type;
    Result chunk_Type_form;
};

struct Chunk6{
Result chunk_Spacing;
    Result chunk_Space;
};

struct Column{
Column():
    chunk0(0)
        ,chunk1(0)
        ,chunk2(0)
        ,chunk3(0)
        ,chunk4(0)
        ,chunk5(0)
        ,chunk6(0){
}

Chunk0 * chunk0;
    Chunk1 * chunk1;
    Chunk2 * chunk2;
    Chunk3 * chunk3;
    Chunk4 * chunk4;
    Chunk5 * chunk5;
    Chunk6 * chunk6;

int hitCount(){
    return 0;
}

int maxHits(){
    return 32;
}

~Column(){
    delete chunk0;
        delete chunk1;
        delete chunk2;
        delete chunk3;
        delete chunk4;
        delete chunk5;
        delete chunk6;
}
};


class ParseException: std::exception {
public:
    ParseException(const std::string & reason):
    std::exception(),
    line(-1), column(-1),
    message(reason){
    }

    ParseException(const std::string & reason, int line, int column):
    std::exception(),
    line(line), column(column),
    message(reason){
    }

    std::string getReason() const;
    int getLine() const;
    int getColumn() const;

    virtual ~ParseException() throw(){
    }

protected:
    int line, column;
    std::string message;
};

class Stream{
public:
    struct LineInfo{
        LineInfo(int line, int column):
        line(line),
        column(column){
        }

        LineInfo(const LineInfo & copy):
        line(copy.line),
        column(copy.column){
        }

        LineInfo():
        line(-1),
        column(-1){
        }

        int line;
        int column;
    };

public:
    /* read from a file */
    Stream(const std::string & filename):
    temp(0),
    buffer(0),
    farthest(0),
    last_line_info(-1){
        std::ifstream stream;
        /* ios::binary is needed on windows */
        stream.open(filename.c_str(), std::ios::in | std::ios::binary);
        if (stream.fail()){
            std::ostringstream out;
            out << __FILE__  << " cannot open '" << filename << "'";
            throw ParseException(out.str());
        }
        stream.seekg(0, std::ios_base::end);
        max = stream.tellg();
        stream.seekg(0, std::ios_base::beg);
        temp = new char[max];
        stream.read(temp, max);
        buffer = temp;
        stream.close();

        line_info[-1] = LineInfo(1, 1);

        createMemo();
    }

    /* for null-terminated strings */
    Stream(const char * in):
    temp(0),
    buffer(in),
    farthest(0),
    last_line_info(-1){
        max = strlen(buffer);
        line_info[-1] = LineInfo(1, 1);
        createMemo();
    }

    /* user-defined length */
    Stream(const char * in, int length):
    temp(0),
    buffer(in),
    farthest(0),
    last_line_info(-1){
        max = length;
        line_info[-1] = LineInfo(1, 1);
        createMemo();
    }

    void createMemo(){
        memo_size = 1024 * 2;
        memo = new Column*[memo_size];
        /* dont create column objects before they are needed because transient
         * productions will never call for them so we can save some space by
         * not allocating columns at all.
         */
        memset(memo, 0, sizeof(Column*) * memo_size);
        /*
        for (int i = 0; i < memo_size; i++){
            memo[i] = new Column();
        }
        */
    }

    int length(){
        return max;
    }

    /* prints statistics about how often rules were fired and how
     * likely rules are to succeed
     */
    void printStats(){
        double min = 1;
        double max = 0;
        double average = 0;
        int count = 0;
        for (int i = 0; i < length(); i++){
            Column & c = getColumn(i);
            double rate = (double) c.hitCount() / (double) c.maxHits();
            if (rate != 0 && rate < min){
                min = rate;
            }
            if (rate > max){
                max = rate;
            }
            if (rate != 0){
                average += rate;
                count += 1;
            }
        }
        std::cout << "Min " << (100 * min) << " Max " << (100 * max) << " Average " << (100 * average / count) << " Count " << count << " Length " << length() << " Rule rate " << (100.0 * (double)count / (double) length()) << std::endl;
    }

    char get(const int position){
        if (position >= max || position < 0){
            return '\0';
        }

        // std::cout << "Read char '" << buffer[position] << "'" << std::endl;

        return buffer[position];
        /*
        char z;
        stream.seekg(position, std::ios_base::beg);
        stream >> z;
        return z;
        */
    }

    bool find(const char * str, const int position){
        if (position >= max || position < 0){
            return false;
        }
        return strncmp(&buffer[position], str, max - position) == 0;
    }

    void growMemo(){
        int newSize = memo_size * 2;
        Column ** newMemo = new Column*[newSize];
        memcpy(newMemo, memo, sizeof(Column*) * memo_size);
        memset(&newMemo[memo_size], 0, sizeof(Column*) * (newSize - memo_size));
        /*
        for (int i = memo_size; i < newSize; i++){
            newMemo[i] = new Column();
        }
        */
        delete[] memo;
        memo = newMemo;
        memo_size = newSize;
    }

    /* I'm sure this can be optimized. It only takes into account
     * the last position used to get line information rather than
     * finding a position closest to the one asked for.
     * So if the last position is 20 and the current position being requested
     * is 15 then this function will compute the information starting from 0.
     * If the information for 10 was computed then that should be used instead.
     * Maybe something like, sort the positions, find closest match lower
     * than the position and start from there.
     */
    LineInfo makeLineInfo(int last_line_position, int position){
        int line = line_info[last_line_position].line;
        int column = line_info[last_line_position].column;
        for (int i = last_line_position + 1; i < position; i++){
            if (buffer[i] == '\n'){
                line += 1;
                column = 1;
            } else {
                column += 1;
            }
        }
        return LineInfo(line, column);
    }

    void updateLineInfo(int position){
        if (line_info.find(position) == line_info.end()){
            if (position > last_line_info){
                line_info[position] = makeLineInfo(last_line_info, position);
            } else {
                line_info[position] = makeLineInfo(0, position);
            }
            last_line_info = position;
        }
    }

    const LineInfo & getLineInfo(int position){
        updateLineInfo(position);
        return line_info[position];
    }

    /* throws a ParseException */
    void reportError(const std::string & parsingContext){
        std::ostringstream out;
        int line = 1;
        int column = 1;
        for (int i = 0; i < farthest; i++){
            if (buffer[i] == '\n'){
                line += 1;
                column = 1;
            } else {
                column += 1;
            }
        }
        int context = 15;
        int left = farthest - context;
        int right = farthest + context;
        if (left < 0){
            left = 0;
        }
        if (right >= max){
            right = max;
        }
        out << "Error while parsing " << parsingContext << ". Read up till line " << line << " column " << column << std::endl;
        std::ostringstream show;
        for (int i = left; i < right; i++){
            char c = buffer[i];
            switch (buffer[i]){
                case '\n' : {
                    show << '\\';
                    show << 'n';
                    break;
                }
                case '\r' : {
                    show << '\\';
                    show << 'r';
                    break;
                }
                case '\t' : {
                    show << '\\';
                    show << 't';
                    break;
                }
                default : show << c; break;
            }
        }
        out << "'" << show.str() << "'" << std::endl;
        for (int i = 0; i < farthest - left; i++){
            out << " ";
        }
        out << "^" << std::endl;
        out << "Last successful rule trace" << std::endl;
        out << makeBacktrace() << std::endl;
        throw ParseException(out.str(), line, column);
    }

    std::string makeBacktrace(){
        std::ostringstream out;

        bool first = true;
        for (std::vector<std::string>::iterator it = last_trace.begin(); it != last_trace.end(); it++){
            if (!first){
                out << " -> ";
            } else {
                first = false;
            }
            out << *it;
        }

        return out.str();
    }

    inline Column & getColumn(const int position){
        while (position >= memo_size){
            growMemo();
        }
        /* create columns lazily because not every position will have a column. */
        if (memo[position] == NULL){
            memo[position] = new Column();
        }
        return *(memo[position]);
    }

    void update(const int position){
        if (position > farthest){
            farthest = position;
            last_trace = rule_backtrace;
        }
    }

    void push_rule(const char * name){
        rule_backtrace.push_back(name);
    }

    void pop_rule(){
        rule_backtrace.pop_back();
    }

    ~Stream(){
        delete[] temp;
        for (int i = 0; i < memo_size; i++){
            delete memo[i];
        }
        delete[] memo;
    }

private:
    char * temp;
    const char * buffer;
    /* an array is faster and uses less memory than std::map */
    Column ** memo;
    int memo_size;
    int max;
    int farthest;
    std::vector<std::string> rule_backtrace;
    std::vector<std::string> last_trace;
    int last_line_info;
    std::map<int, LineInfo> line_info;
};

static int getCurrentLine(const Value & value){
    Stream::LineInfo * info = (Stream::LineInfo*) value.getValue();
    return info->line;
}

static int getCurrentColumn(const Value & value){
    Stream::LineInfo * info = (Stream::LineInfo*) value.getValue();
    return info->column;
}

class RuleTrace{
public:
    RuleTrace(Stream & stream, const char * name):
    stream(stream){
        stream.push_rule(name);
    }

    ~RuleTrace(){
        stream.pop_rule();
    }

    Stream & stream;
};

static inline bool compareChar(const char a, const char b){
    return a == b;
}

static inline char lower(const char x){
    if (x >= 'A' && x <= 'Z'){
        return x - 'A' + 'a';
    }
    return x;
}

static inline bool compareCharCase(const char a, const char b){
    return lower(a) == lower(b);
}


std::string ParseException::getReason() const {
return message;
}

int ParseException::getLine() const {
return line;
}

int ParseException::getColumn() const {
return column;
}

Result errorResult(-1);

Result rule_Identifier(Stream &, const int);
Result rule_IdentCont(Stream &, const int);
Result rule_File(Stream &, const int);
Result rule_Typedef(Stream &, const int);
Result rule_Verbatim(Stream &, const int);
Result rule_RealType(Stream &, const int);
Result rule_String(Stream &, const int);
Result rule_Things(Stream &, const int);
Result rule_Include(Stream &, const int);
Result rule_FirstParam(Stream &, const int);
Result rule_LastParam(Stream &, const int);
Result rule_Parameters(Stream &, const int);
Result rule_Rpc(Stream &, const int);
Result rule_Message(Stream &, const int);
Result rule_Message_field(Stream &, const int);
Result rule_Projection(Stream &, const int);
Result rule_Proj_type(Stream &, const int);
Result rule_Start(Stream &, const int);
Result rule_Specification(Stream &, const int);
Result rule_ProjField(Stream &, const int);
Result rule_Last(Stream &, const int);
Result rule_Declaration(Stream &, const int);
Result rule_Comment(Stream &, const int);
Result rule_Comment_rest(Stream &, const int);
Result rule_Line_comm_rest(Stream &, const int);
Result rule_Line_comment(Stream &, const int);
Result rule_Simple_Type(Stream &, const int);
Result rule_Type_w_modifier(Stream &, const int);
Result rule_Type(Stream &, const int);
Result rule_Type_form(Stream &, const int);
Result rule_Spacing(Stream &, const int);
Result rule_Space(Stream &, const int);




Result rule_Identifier(Stream & stream, const int position){
    
    Column & column_peg_1 = stream.getColumn(position);
    if (column_peg_1.chunk0 != 0 && column_peg_1.chunk0->chunk_Identifier.calculated()){
        return column_peg_1.chunk0->chunk_Identifier;
    }
    
    RuleTrace trace_peg_15(stream, "Identifier");
    int myposition = position;
    
    
    Value i1;
        Value i2;
    Result result_peg_2(myposition);
        std::cout << "Trying rule Identifier at " << myposition << " '" << stream.get(result_peg_2.getPosition()) << "' alternative: i1:IdentStart i2:IdentCont* Spacing {{ \n			std::ostringstream total;\n			total << (char) (intptr_t) i1.getValue();\n\n		   	for(Value::iterator it = i2.getValues().begin(); it != i2.getValues().end(); it ++)\n		   	{\n				const Value & v = *it;\n				char letter = (char) (intptr_t) v.getValue();\n				total << letter;\n		   	}\n				std::string str = total.str();\n		   		value = &str[0]; }}" << std::endl;
        {
        
            {
                    int position_peg_6 = result_peg_2.getPosition();
                    
                    char letter_peg_9 = stream.get(result_peg_2.getPosition());
                    if (letter_peg_9 != '\0' && strchr("abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_", letter_peg_9) != NULL){
                        result_peg_2.nextPosition();
                        result_peg_2.setValue(Value((void*) (long) letter_peg_9));
                    } else {
                        result_peg_2.setPosition(position_peg_6);
                        goto out_peg_8;
                    }
                    
                }
                goto success_peg_4;
                out_peg_8:
                goto out_peg_10;
                success_peg_4:
                ;
                i1 = result_peg_2.getValues();
            
            
            
            result_peg_2.reset();
                do{
                    Result result_peg_13(result_peg_2.getPosition());
                    result_peg_13 = rule_IdentCont(stream, result_peg_13.getPosition());
                    if (result_peg_13.error()){
                        goto loop_peg_12;
                    }
                    result_peg_2.addResult(result_peg_13);
                } while (true);
                loop_peg_12:
                ;
                i2 = result_peg_2.getValues();
            
            
            
            result_peg_2 = rule_Spacing(stream, result_peg_2.getPosition());
                if (result_peg_2.error()){
                    goto out_peg_10;
                }
            
            
            
            {
                    Value value((void*) 0);
                    std::ostringstream total;
                    			total << (char) (intptr_t) i1.getValue();
                    
                    		   	for(Value::iterator it = i2.getValues().begin(); it != i2.getValues().end(); it ++)
                    		   	{
                    				const Value & v = *it;
                    				char letter = (char) (intptr_t) v.getValue();
                    				total << letter;
                    		   	}
                    				std::string str = total.str();
                    		   		value = &str[0];
                    result_peg_2.setValue(value);
                }
            
            
        }
        
        if (column_peg_1.chunk0 == 0){
            column_peg_1.chunk0 = new Chunk0();
        }
        column_peg_1.chunk0->chunk_Identifier = result_peg_2;
        stream.update(result_peg_2.getPosition());
        
        std::cout << "Succeeded rule Identifier at position " << result_peg_2.getPosition() << " alternative: i1:IdentStart i2:IdentCont* Spacing {{ \n			std::ostringstream total;\n			total << (char) (intptr_t) i1.getValue();\n\n		   	for(Value::iterator it = i2.getValues().begin(); it != i2.getValues().end(); it ++)\n		   	{\n				const Value & v = *it;\n				char letter = (char) (intptr_t) v.getValue();\n				total << letter;\n		   	}\n				std::string str = total.str();\n		   		value = &str[0]; }}" << std::endl;
        return result_peg_2;
        out_peg_10:
    
        if (column_peg_1.chunk0 == 0){
            column_peg_1.chunk0 = new Chunk0();
        }
        column_peg_1.chunk0->chunk_Identifier = errorResult;
        stream.update(errorResult.getPosition());
        
    
    return errorResult;
}
        

Result rule_IdentCont(Stream & stream, const int position){
    
    Column & column_peg_1 = stream.getColumn(position);
    if (column_peg_1.chunk0 != 0 && column_peg_1.chunk0->chunk_IdentCont.calculated()){
        return column_peg_1.chunk0->chunk_IdentCont;
    }
    
    RuleTrace trace_peg_13(stream, "IdentCont");
    int myposition = position;
    
    
    
    Result result_peg_2(myposition);
        std::cout << "Trying rule IdentCont at " << myposition << " '" << stream.get(result_peg_2.getPosition()) << "' alternative: IdentStart" << std::endl;
        {
            int position_peg_5 = result_peg_2.getPosition();
            
            char letter_peg_8 = stream.get(result_peg_2.getPosition());
            if (letter_peg_8 != '\0' && strchr("abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_", letter_peg_8) != NULL){
                result_peg_2.nextPosition();
                result_peg_2.setValue(Value((void*) (long) letter_peg_8));
            } else {
                result_peg_2.setPosition(position_peg_5);
                goto out_peg_7;
            }
            
        }
        goto success_peg_3;
        out_peg_7:
        goto out_peg_9;
        success_peg_3:
        ;
        
        if (column_peg_1.chunk0 == 0){
            column_peg_1.chunk0 = new Chunk0();
        }
        column_peg_1.chunk0->chunk_IdentCont = result_peg_2;
        stream.update(result_peg_2.getPosition());
        
        std::cout << "Succeeded rule IdentCont at position " << result_peg_2.getPosition() << " alternative: IdentStart" << std::endl;
        return result_peg_2;
        out_peg_9:
        Result result_peg_10(myposition);
        std::cout << "Trying rule IdentCont at " << myposition << " '" << stream.get(result_peg_10.getPosition()) << "' alternative: [0123456789]" << std::endl;
        char letter_peg_11 = stream.get(result_peg_10.getPosition());
        if (letter_peg_11 != '\0' && strchr("0123456789", letter_peg_11) != NULL){
            result_peg_10.nextPosition();
            result_peg_10.setValue(Value((void*) (long) letter_peg_11));
        } else {
            goto out_peg_12;
        }
        
        if (column_peg_1.chunk0 == 0){
            column_peg_1.chunk0 = new Chunk0();
        }
        column_peg_1.chunk0->chunk_IdentCont = result_peg_10;
        stream.update(result_peg_10.getPosition());
        
        std::cout << "Succeeded rule IdentCont at position " << result_peg_10.getPosition() << " alternative: [0123456789]" << std::endl;
        return result_peg_10;
        out_peg_12:
    
        if (column_peg_1.chunk0 == 0){
            column_peg_1.chunk0 = new Chunk0();
        }
        column_peg_1.chunk0->chunk_IdentCont = errorResult;
        stream.update(errorResult.getPosition());
        
    
    return errorResult;
}
        

Result rule_File(Stream & stream, const int position){
    
    Column & column_peg_1 = stream.getColumn(position);
    if (column_peg_1.chunk0 != 0 && column_peg_1.chunk0->chunk_File.calculated()){
        return column_peg_1.chunk0->chunk_File;
    }
    
    RuleTrace trace_peg_11(stream, "File");
    int myposition = position;
    
    
    Value v;
        Value t;
    Result result_peg_2(myposition);
        std::cout << "Trying rule File at " << myposition << " '" << stream.get(result_peg_2.getPosition()) << "' alternative: Spacing v:Verbatim? t:Things* <eof> {{ std::vector<Definition *>* defs = new std::vector<Definition *>;\n			std::vector<Rpc *>* rpcs = new std::vector<Rpc *>;\n			std::vector<Message *>* messages = new std::vector<Message *>;\n			std::map<char *, Definition*> *env = new std::map<char *, Definition *>;\n			for(Value::iterator it = t.getValues().begin(); it != t.getValues().end(); it ++)\n			{\n				const Value & v = *it;\n				Definition * ds = (Definition *) v.getValue();\n				if(!ds)\n				{\n					printf(\"error null pointer\\n\");\n					exit(0);\n				}\n				switch (ds->get_definition_type())\n				{\n				case kRpc:\n				{\n				Rpc * rp = reinterpret_cast<Rpc *>(ds);\n				rpcs->push_back(rp);\n				}				\n				break;\n				case kMessage:\n				{\n				Message * mess = reinterpret_cast<Message *>(ds);\n				messages->push_back(mess);\n				}\n				break;\n				case kProjection:\n				{\n				Projection* proj = reinterpret_cast<Projection *>(ds);\n				env->insert(std::pair<char *, Definition *>(proj->name(), ds));\n				}\n				case kTypedef:\n				{\n				Typedef* td = reinterpret_cast<Typedef*>(ds);\n				env->insert(std::pair<char*, Definition*>(td->name(), ds));\n				}\n				break;\n				default:\n				{\n				printf(\"fatal error\\n\");\n				}\n				}\n\n			}\n			  value = new Scope((char*) v.getValue(), rpcs, messages, env); }}" << std::endl;
        {
        
            result_peg_2 = rule_Spacing(stream, result_peg_2.getPosition());
                if (result_peg_2.error()){
                    goto out_peg_4;
                }
            
            
            
            int save_peg_6 = result_peg_2.getPosition();
                
                result_peg_2 = rule_Verbatim(stream, result_peg_2.getPosition());
                if (result_peg_2.error()){
                    
                    result_peg_2 = Result(save_peg_6);
                    result_peg_2.setValue(Value((void*) 0));
                    
                }
                v = result_peg_2.getValues();
            
            
            
            result_peg_2.reset();
                do{
                    Result result_peg_9(result_peg_2.getPosition());
                    result_peg_9 = rule_Things(stream, result_peg_9.getPosition());
                    if (result_peg_9.error()){
                        goto loop_peg_8;
                    }
                    result_peg_2.addResult(result_peg_9);
                } while (true);
                loop_peg_8:
                ;
                t = result_peg_2.getValues();
            
            
            
            if ('\0' == stream.get(result_peg_2.getPosition())){
                    result_peg_2.nextPosition();
                    result_peg_2.setValue(Value((void *) '\0'));
                } else {
                    goto out_peg_4;
                }
            
            
            
            {
                    Value value((void*) 0);
                    std::vector<Definition *>* defs = new std::vector<Definition *>;
                    			std::vector<Rpc *>* rpcs = new std::vector<Rpc *>;
                    			std::vector<Message *>* messages = new std::vector<Message *>;
                    			std::map<char *, Definition*> *env = new std::map<char *, Definition *>;
                    			for(Value::iterator it = t.getValues().begin(); it != t.getValues().end(); it ++)
                    			{
                    				const Value & v = *it;
                    				Definition * ds = (Definition *) v.getValue();
                    				if(!ds)
                    				{
                    					printf("error null pointer\n");
                    					exit(0);
                    				}
                    				switch (ds->get_definition_type())
                    				{
                    				case kRpc:
                    				{
                    				Rpc * rp = reinterpret_cast<Rpc *>(ds);
                    				rpcs->push_back(rp);
                    				}				
                    				break;
                    				case kMessage:
                    				{
                    				Message * mess = reinterpret_cast<Message *>(ds);
                    				messages->push_back(mess);
                    				}
                    				break;
                    				case kProjection:
                    				{
                    				Projection* proj = reinterpret_cast<Projection *>(ds);
                    				env->insert(std::pair<char *, Definition *>(proj->name(), ds));
                    				}
                    				case kTypedef:
                    				{
                    				Typedef* td = reinterpret_cast<Typedef*>(ds);
                    				env->insert(std::pair<char*, Definition*>(td->name(), ds));
                    				}
                    				break;
                    				default:
                    				{
                    				printf("fatal error\n");
                    				}
                    				}
                    
                    			}
                    			  value = new Scope((char*) v.getValue(), rpcs, messages, env);
                    result_peg_2.setValue(value);
                }
            
            
        }
        
        if (column_peg_1.chunk0 == 0){
            column_peg_1.chunk0 = new Chunk0();
        }
        column_peg_1.chunk0->chunk_File = result_peg_2;
        stream.update(result_peg_2.getPosition());
        
        std::cout << "Succeeded rule File at position " << result_peg_2.getPosition() << " alternative: Spacing v:Verbatim? t:Things* <eof> {{ std::vector<Definition *>* defs = new std::vector<Definition *>;\n			std::vector<Rpc *>* rpcs = new std::vector<Rpc *>;\n			std::vector<Message *>* messages = new std::vector<Message *>;\n			std::map<char *, Definition*> *env = new std::map<char *, Definition *>;\n			for(Value::iterator it = t.getValues().begin(); it != t.getValues().end(); it ++)\n			{\n				const Value & v = *it;\n				Definition * ds = (Definition *) v.getValue();\n				if(!ds)\n				{\n					printf(\"error null pointer\\n\");\n					exit(0);\n				}\n				switch (ds->get_definition_type())\n				{\n				case kRpc:\n				{\n				Rpc * rp = reinterpret_cast<Rpc *>(ds);\n				rpcs->push_back(rp);\n				}				\n				break;\n				case kMessage:\n				{\n				Message * mess = reinterpret_cast<Message *>(ds);\n				messages->push_back(mess);\n				}\n				break;\n				case kProjection:\n				{\n				Projection* proj = reinterpret_cast<Projection *>(ds);\n				env->insert(std::pair<char *, Definition *>(proj->name(), ds));\n				}\n				case kTypedef:\n				{\n				Typedef* td = reinterpret_cast<Typedef*>(ds);\n				env->insert(std::pair<char*, Definition*>(td->name(), ds));\n				}\n				break;\n				default:\n				{\n				printf(\"fatal error\\n\");\n				}\n				}\n\n			}\n			  value = new Scope((char*) v.getValue(), rpcs, messages, env); }}" << std::endl;
        return result_peg_2;
        out_peg_4:
    
        if (column_peg_1.chunk0 == 0){
            column_peg_1.chunk0 = new Chunk0();
        }
        column_peg_1.chunk0->chunk_File = errorResult;
        stream.update(errorResult.getPosition());
        
    
    return errorResult;
}
        

Result rule_Typedef(Stream & stream, const int position){
    
    Column & column_peg_1 = stream.getColumn(position);
    if (column_peg_1.chunk0 != 0 && column_peg_1.chunk0->chunk_Typedef.calculated()){
        return column_peg_1.chunk0->chunk_Typedef;
    }
    
    RuleTrace trace_peg_18(stream, "Typedef");
    int myposition = position;
    
    
    Value rt;
        Value mt;
        Value id;
    Result result_peg_2(myposition);
        std::cout << "Trying rule Typedef at " << myposition << " '" << stream.get(result_peg_2.getPosition()) << "' alternative: \"typedef\" Spacing \"<\" Spacing rt:RealType Spacing \",\" Spacing mt:Type Spacing \">\" Spacing id:Identifier Spacing {{ \n			 value = new Typedef((char*) rt.getValue(), (Type*) mt.getValue(), (char*) id.getValue());}}" << std::endl;
        {
        
            result_peg_2.setValue(Value((void*) "typedef"));
                for (int i = 0; i < 7; i++){
                    if (compareChar("typedef"[i], stream.get(result_peg_2.getPosition()))){
                        result_peg_2.nextPosition();
                    } else {
                        goto out_peg_4;
                    }
                }
            
            
            
            result_peg_2 = rule_Spacing(stream, result_peg_2.getPosition());
                if (result_peg_2.error()){
                    goto out_peg_4;
                }
            
            
            
            result_peg_2.setValue(Value((void*) "<"));
                for (int i = 0; i < 1; i++){
                    if (compareChar("<"[i], stream.get(result_peg_2.getPosition()))){
                        result_peg_2.nextPosition();
                    } else {
                        goto out_peg_4;
                    }
                }
            
            
            
            result_peg_2 = rule_Spacing(stream, result_peg_2.getPosition());
                if (result_peg_2.error()){
                    goto out_peg_4;
                }
            
            
            
            result_peg_2 = rule_RealType(stream, result_peg_2.getPosition());
                if (result_peg_2.error()){
                    goto out_peg_4;
                }
                rt = result_peg_2.getValues();
            
            
            
            result_peg_2 = rule_Spacing(stream, result_peg_2.getPosition());
                if (result_peg_2.error()){
                    goto out_peg_4;
                }
            
            
            
            result_peg_2.setValue(Value((void*) ","));
                for (int i = 0; i < 1; i++){
                    if (compareChar(","[i], stream.get(result_peg_2.getPosition()))){
                        result_peg_2.nextPosition();
                    } else {
                        goto out_peg_4;
                    }
                }
            
            
            
            result_peg_2 = rule_Spacing(stream, result_peg_2.getPosition());
                if (result_peg_2.error()){
                    goto out_peg_4;
                }
            
            
            
            result_peg_2 = rule_Type(stream, result_peg_2.getPosition());
                if (result_peg_2.error()){
                    goto out_peg_4;
                }
                mt = result_peg_2.getValues();
            
            
            
            result_peg_2 = rule_Spacing(stream, result_peg_2.getPosition());
                if (result_peg_2.error()){
                    goto out_peg_4;
                }
            
            
            
            result_peg_2.setValue(Value((void*) ">"));
                for (int i = 0; i < 1; i++){
                    if (compareChar(">"[i], stream.get(result_peg_2.getPosition()))){
                        result_peg_2.nextPosition();
                    } else {
                        goto out_peg_4;
                    }
                }
            
            
            
            result_peg_2 = rule_Spacing(stream, result_peg_2.getPosition());
                if (result_peg_2.error()){
                    goto out_peg_4;
                }
            
            
            
            result_peg_2 = rule_Identifier(stream, result_peg_2.getPosition());
                if (result_peg_2.error()){
                    goto out_peg_4;
                }
                id = result_peg_2.getValues();
            
            
            
            result_peg_2 = rule_Spacing(stream, result_peg_2.getPosition());
                if (result_peg_2.error()){
                    goto out_peg_4;
                }
            
            
            
            {
                    Value value((void*) 0);
                    value = new Typedef((char*) rt.getValue(), (Type*) mt.getValue(), (char*) id.getValue());
                    result_peg_2.setValue(value);
                }
            
            
        }
        
        if (column_peg_1.chunk0 == 0){
            column_peg_1.chunk0 = new Chunk0();
        }
        column_peg_1.chunk0->chunk_Typedef = result_peg_2;
        stream.update(result_peg_2.getPosition());
        
        std::cout << "Succeeded rule Typedef at position " << result_peg_2.getPosition() << " alternative: \"typedef\" Spacing \"<\" Spacing rt:RealType Spacing \",\" Spacing mt:Type Spacing \">\" Spacing id:Identifier Spacing {{ \n			 value = new Typedef((char*) rt.getValue(), (Type*) mt.getValue(), (char*) id.getValue());}}" << std::endl;
        return result_peg_2;
        out_peg_4:
    
        if (column_peg_1.chunk0 == 0){
            column_peg_1.chunk0 = new Chunk0();
        }
        column_peg_1.chunk0->chunk_Typedef = errorResult;
        stream.update(errorResult.getPosition());
        
    
    return errorResult;
}
        
